--- a/trabToDoList/index.html
+++ b/trabToDoList/index.html
@@ -108,9 +108,10 @@
   </main>
 
   <footer class="bg-light py-3 mt-auto">
-    <div class="container small text-muted">Feito para a disciplina. Valide com W3C e verifique o console para nenhum erro.</div>
+    <div class="container small text-muted">Théo Braga Goated</div>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
